--- a/index.html
+++ b/index.html
@@ -5,6 +5,178 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="content-section">
+      <nav class="menu-header">
+        <div class="menu-container">
+          <div >
+            <a class="main-link">главная</a> <!--поменять на блок, без ссылки-->
+          </div>
+          <div class="menu-container-main-link">
+            <ul class="container-main-link-ul">
+              <li>
+                <a class="nav-links" href="#000">посмотреть лоты</a>
+              </li>
+              <li>
+                <a class="nav-links" href="#000">об аукционе</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <a class="logo-black">
+        <img class="logo-black-img" src="./images/logo-black.svg" alt="image_black_logo">
+      </a>
+      <address class="address_">
+        <div class="address_container">
+          <ul class="address_ul">
+            <li>
+              <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            </li>
+            <li>
+              <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            </li>
+            <li>
+              наб. Принсенграхт 263-265,&nbsp;Амстердам
+            </li>
+          </ul>
+        </div>
+      </address>
+    </header>
+    <main>
+      <section class="content-section cover" id="id-cover">
+        <div class="overlay"> </div>
+        <h1>
+          <span class="span ono">оно</span>
+          <span class="span tebe">тебе</span>
+          <span class="span nado">надо</span>
+        </h1>
+        <div class="description">
+          <p class="auction-cover">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button> сделать ставку</button>
+        </div>
+        
+      </section>
+      <section class="content-section lots">
+        <h2 class="lots_heading">
+          Лоты
+        </h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title" href="#0000">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="text-lot">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title" href="#0000">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="text-lot">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
+                    В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+                    И это всё накладывается на эпическую поэму Гомера. 
+                    Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>  
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title" href="#0000">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="text-lot">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+                    Никаких полей, лесов, котиков... 
+                    Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        <a class="more-learn" href="#0">
+          посмотреть больше
+        </a>
+      </section>
+      <section class="content-section about">
+        <div class="about__column about__logo-column">
+          <div class="about__logo">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="logo-white">
+          </div>
+        </div>
+        <h4 class="about__column about__title">
+            об аукционе
+        </h4>
+        <div class=" about__text">
+          <p class="text-about-auction">
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
+            Наши лоты вообще не должны были попасть ни на один аукцион. 
+            Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? 
+            Кому нужны все эти странные вещи, созданные любителями?
+          </p>
+          <p class="text-about-auction">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
+            Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
+            Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="content-section footer">
+      <address class="footer__address">
+        <ul class="address_ul">
+          <li>+9 999 555 5555</li>
+          <li>info@sobaka.ge</li>
+          <li>наб. Принсенграхт 263-265, Амстердам</li>
+        </ul>
+      </address>
+      <nav class="footer__menu">
+        <a class="main-link">главная</a> <!--поменять на блок, без ссылки-->
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#000">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#000">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img src="./images/yt.svg" alt="">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img src="./images/vk.svg" alt="">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link">
+            <img src="./images/pinterest.svg" alt="">
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
