--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="address_container">
           <ul class="address_ul">
             <li>
-              <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+              <a href="tel:+99995555555">+9 999 555 5555</a>
             </li>
             <li>
               <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -72,7 +72,7 @@
             <a class="card-link" href="#0">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h3 class="card__title" href="#0000">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
                 <p class="text-lot">
@@ -85,7 +85,7 @@
             <a class="card-link" href="#0">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h3 class="card__title" href="#0000">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
                 <p class="text-lot">
@@ -101,7 +101,7 @@
             <a class="card-link" href="#0">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h3 class="card__title" href="#0000">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
                 <p class="text-lot">
@@ -112,6 +112,7 @@
               </article>
             </a>
           </li>
+        </ul>
         <a class="more-learn" href="#0">
           посмотреть больше
         </a>
