готовый проект №1 (публичный)6

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   </head>
   <body>
     <header class="content-section header">
-      <nav class="menu-header">
+      <nav class="header__menu">
         <div class="menu-container">
-          <div class="menu-container-main-link">
-            <ul class="container-main-link-ul">
-              <li class="home-link">
-                <a class="home-link">главная</a>
+          <div class="menu-container-header-link">
+            <ul class="header__links-list">
+              <li class="header__links-list-item  header__links-list-item_no-bullit">
+                <a class="header__link header__link_active" href="#0">главная</a>
               </li>
-              <li>
-                <a class="nav-links" href="#000">посмотреть лоты</a>
+              <li class="header__links-list-item">
+                <a class="header__link" href="#000">посмотреть лоты</a>
               </li>
-              <li>
-                <a class="nav-links" href="#000">об аукционе</a>
+              <li class="header__links-list-item">
+                <a class="header__link" href="#000">об аукционе</a>
               </li>
             </ul>
           </div>
@@ -149,8 +149,10 @@
         </ul>
       </address>
       <nav class="footer__menu">
-        <a class="main-link">главная</a> <!--поменять на блок, без ссылки-->
         <ul class="footer__menu-list">
+          <li>
+            <a class="footer__menu-link footer__menu-link_active" href="#0">главная</a>
+          </li>
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#000">посмотреть лоты</a>
           </li>
